k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-apps
  labels:
    app: go-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-web-app 
  template:
    matadata:
      app: go-web-app
    spec:
      containers:
        - name: go-web-application
          image: rammohan855/go-web-app:v1
          ports:
            - containerPort: 8080
