k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-service
  labels:
    app: go-web-app
spec:
  type: NodePort
  selector:
    app: go-web
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
